--- a/index.html
+++ b/index.html
@@ -10,19 +10,26 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background: #111;
+      color: #fff;
+      min-height: 100vh;
     }
 
     .popup {
       position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.75);
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.85);
       display: flex;
       align-items: center;
       justify-content: center;
+      z-index: 9999;
     }
 
     .popup-content {
       background: #fff;
+      color: #000;
       padding: 25px;
       border-radius: 14px;
       width: 90%;
@@ -44,17 +51,12 @@
       background: #000;
       color: #fff;
       font-size: 16px;
+      cursor: pointer;
     }
 
     @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: scale(0.95);
-      }
-      to {
-        opacity: 1;
-        transform: scale(1);
-      }
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
     }
   </style>
 </head>
@@ -80,7 +82,6 @@
 
   function mostrar() {
     document.getElementById("texto").innerHTML = letra[indice];
-
     if (indice === letra.length - 1) {
       document.getElementById("btn").innerText = "Cerrar";
     }
@@ -95,8 +96,7 @@
     }
   }
 
-  // Mostrar el primer pop-up al cargar
-  mostrar();
+  mostrar(); // Mostrar primer pop-up al cargar
 </script>
 
 </body>
