--- a/index.html
+++ b/index.html
@@ -1,103 +1,107 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi Canción</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Mi Canción</title>
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #111;
+  color: #fff;
+  height: 100vh;
+  overflow: hidden;
+}
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #111;
-      color: #fff;
-      min-height: 100vh;
-    }
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.85);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
 
-    .popup {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.85);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-    }
+.popup-content {
+  background: #fff;
+  color: #000;
+  padding: 25px;
+  border-radius: 14px;
+  width: 90%;
+  max-width: 400px;
+  text-align: center;
+  animation: fadeIn 0.4s ease;
+}
 
-    .popup-content {
-      background: #fff;
-      color: #000;
-      padding: 25px;
-      border-radius: 14px;
-      width: 90%;
-      max-width: 420px;
-      text-align: center;
-      animation: fadeIn 0.4s ease;
-    }
+.letra {
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
 
-    .letra {
-      font-size: 18px;
-      line-height: 1.6;
-      margin-bottom: 20px;
-    }
+button {
+  padding: 12px 25px;
+  border: none;
+  border-radius: 8px;
+  background: #000;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+}
 
-    button {
-      padding: 12px 25px;
-      border: none;
-      border-radius: 8px;
-      background: #000;
-      color: #fff;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.95); }
-      to { opacity: 1; transform: scale(1); }
-    }
-  </style>
+@keyframes fadeIn {
+  from {opacity:0; transform: scale(0.95);}
+  to {opacity:1; transform: scale(1);}
+}
+</style>
 </head>
-
 <body>
 
 <div class="popup" id="popup">
   <div class="popup-content">
     <div class="letra" id="texto"></div>
-    <button id="btn" onclick="siguiente()">Siguiente</button>
+    <button id="btn">Siguiente</button>
   </div>
 </div>
 
 <script>
-  const letra = [
-    "Yo no soy celoso,<br>¿pero quién e' ese ....?",
-    "Dime quién e' ese .....",
-    "Tranquila, no soy psycho<br>No vo'a hacer un papelón, pero",
-    "Auch, mi corazón"
-  ];
+const letra = [
+  "Yo no soy celoso,<br>¿pero quién e' ese ....?",
+  "Dime quién e' ese .....",
+  "Tranquila, no soy psycho<br>No vo'a hacer un papelón, pero",
+  "Auch, mi corazón"
+];
 
-  let indice = 0;
+let indice = 0;
+const texto = document.getElementById("texto");
+const btn = document.getElementById("btn");
 
-  function mostrar() {
-    document.getElementById("texto").innerHTML = letra[indice];
-    if (indice === letra.length - 1) {
-      document.getElementById("btn").innerText = "Cerrar";
-    }
+function mostrar() {
+  texto.innerHTML = letra[indice];
+  if (indice === letra.length - 1) {
+    btn.innerText = "Cerrar";
   }
+}
 
-  function siguiente() {
-    if (indice < letra.length - 1) {
-      indice++;
-      mostrar();
-    } else {
-      document.getElementById("popup").style.display = "none";
-    }
+// Avanzar pop-up al botón
+btn.addEventListener("click", () => {
+  if (indice < letra.length - 1) {
+    indice++;
+    mostrar();
+  } else {
+    document.getElementById("popup").style.display = "none";
   }
+});
 
-  mostrar(); // Mostrar primer pop-up al cargar
+// Mostrar primer pop-up en cuanto cargue la página
+document.addEventListener("DOMContentLoaded", mostrar);
 </script>
 
 </body>
 </html>
+
