--- a/index.html
+++ b/index.html
@@ -87,24 +87,24 @@ button {
   </div>
 </div>
 
-<!-- Audio Beat -->
+Cancion
 <audio id="beat" loop>
   <source src="beat.mp3" type="audio/mpeg">
-  Tu navegador no soporta audio
 </audio>
 
 <script>
 const letra = [
-  "Yo no soy celoso,<br>¿pero quién e' ese ....?",
-  "Dime quién e' ese .....",
-  "Tranquila, no soy psycho<br>No vo'a hacer un papelón, pero",
-  "Auch, mi corazón"
+  "Yo no soy celoso, ¿pero quién e'ese cabrón?"
+  "Dime quién e'ese cabrón"
+  "Tranquila, no soy psycho"
+  "No vo'a hacer un papelón, pero"
+  "Auch, mi corazón
 ];
 
 const texto = document.getElementById("texto");
 const popup = document.getElementById("popup");
 const beat = document.getElementById("beat");
-const duracion = 10000; // 3 segundos por popup
+const duracion = 3000; // 3 segundos por popup
 let indice = 0;
 
 // Función para mostrar pop-ups automáticos
@@ -130,4 +130,5 @@ document.getElementById("startBtn").addEventListener("click", () => {
 
 </body>
 </html>
+
 
