--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ const letra = [
   "Dime quién e'ese cabrón"
   "Tranquila, no soy psycho"
   "No vo'a hacer un papelón, pero"
-  "Auch, mi corazón
+  "Auch, mi corazón"
 ];
 
 const texto = document.getElementById("texto");
@@ -130,5 +130,6 @@ document.getElementById("startBtn").addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
