--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@ Cancion
 
 <script>
 const letra = [
-  "Yo no soy celoso, ¿pero quién e'ese cabrón?"
-  "Dime quién e'ese cabrón"
-  "Tranquila, no soy psycho"
-  "No vo'a hacer un papelón, pero"
+  "Yo no soy celoso, ¿pero quién e'ese cabrón?",
+  "Dime quién e'ese cabrón",
+  "Tranquila, no soy psycho",
+  "No vo'a hacer un papelón, pero",
   "Auch, mi corazón"
 ];
 
@@ -130,6 +130,7 @@ document.getElementById("startBtn").addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
