--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@ button {
   </div>
 </div>
 
-Cancion
+<!-- Audio Beat -->
 <audio id="beat" loop>
   <source src="beat.mp3" type="audio/mpeg">
+  Tu navegador no soporta audio
 </audio>
 
 <script>
 const letra = [
-  "Yo no soy celoso, ¿pero quién e'ese cabrón?",
-  "Dime quién e'ese cabrón",
-  "Tranquila, no soy psycho",
-  "No vo'a hacer un papelón, pero",
+  "Yo no soy celoso,<br>¿pero quién e' ese ....?",
+  "Dime quién e' ese .....",
+  "Tranquila, no soy psycho<br>No vo'a hacer un papelón, pero",
   "Auch, mi corazón"
 ];
 
@@ -130,7 +130,3 @@ document.getElementById("startBtn").addEventListener("click", () => {
 
 </body>
 </html>
-
-
-
-
