--- a/index.html
+++ b/index.html
@@ -96,14 +96,15 @@ button {
 <script>
 // Frases de la canción
 const letra = [
-  "Yo no soy celoso,<br>¿pero quién e' ese ....?",
-  "Dime quién e' ese .....",
-  "Tranquila, no soy psycho<br>No vo'a hacer un papelón, pero",
-  "Auch, mi corazón"
+"Yo no soy celoso, ¿pero quién e'ese cabrón?",
+"Dime quién e'ese cabrón",
+"Tranquila, no soy psycho",
+"No vo'a hacer un papelón, pero",
+"Auch, mi corazón"
 ];
 
 // Duración de cada popup en milisegundos
-const duracion = [3000, 4000, 5000, 3500]; // Puedes cambiar cada tiempo
+const duracion = [4000, 3000, 3000, 3000]; // Puedes cambiar cada tiempo
 
 const texto = document.getElementById("texto");
 const popup = document.getElementById("popup");
@@ -143,3 +144,4 @@ document.getElementById("startBtn").addEventListener("click", () => {
 
 </body>
 </html>
+
