--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ const letra = [
 ];
 
 // Duración de cada popup en milisegundos
-const duracion = [4000, 2500,2500,3000, 3000]; // Puedes cambiar cada tiempo
+const duracion = [4000, 2500,2000,3000,1500]; // Puedes cambiar cada tiempo
 
 const texto = document.getElementById("texto");
 const popup = document.getElementById("popup");
@@ -144,5 +144,6 @@ document.getElementById("startBtn").addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
