--- a/index.html
+++ b/index.html
@@ -3,147 +3,231 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mi Canción con Beat</title>
+<title>CELOSO?</title>
+
 <style>
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
-  background: #111;
-  color: #fff;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
   height: 100vh;
   overflow: hidden;
-}
-
-/* Pantalla inicial */
-#inicio {
+  background: linear-gradient(270deg, #ff5f6d, #ffc371, #24c6dc, #514a9d);
+  background-size: 800% 800%;
+  animation: gradientBG 20s ease infinite;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  background: #111;
   color: #fff;
-  flex-direction: column;
+  position: relative;
 }
 
-/* Pop-up */
-.popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.85);
+
+@keyframes gradientBG {
+  0% {background-position:0% 50%;}
+  50% {background-position:100% 50%;}
+  100% {background-position:0% 50%;}
+}
+
+/* Pantalla inicial */#inicio {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 9999;
-}
-
-.popup-content {
-  background: #fff;
-  color: #000;
-  padding: 25px;
-  border-radius: 14px;
-  width: 90%;
-  max-width: 400px;
+  flex-direction: column;
   text-align: center;
-  animation: fadeIn 0.4s ease;
+  z-index: 10;
 }
 
-.letra {
-  font-size: 18px;
-  line-height: 1.6;
-}
-
-@keyframes fadeIn {
-  from {opacity:0; transform: scale(0.95);}
-  to {opacity:1; transform: scale(1);}
+#inicio h2 {
+  font-size: 26px;
+  margin-bottom: 20px;
+  text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 button {
-  padding: 12px 25px;
+  padding: 14px 35px;
   border: none;
-  border-radius: 8px;
-  background: #000;
-  color: #fff;
-  font-size: 16px;
+  border-radius: 50px;
+  background: #fff;
+  color: #111;
+  font-size: 18px;
   cursor: pointer;
-  margin-top: 15px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+  transition: transform 0.2s;
+}
+
+button:hover {
+  transform: scale(1.05);
+}
+
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(255,255,255,0.95);
+  color: #111;
+  padding: 35px 30px;
+  border-radius: 25px;
+  max-width: 450px;
+  width: 90%;
+  text-align: center;
+  box-shadow: 0 12px 35px rgba(0,0,0,0.5);
+  opacity: 0;
+  transition: opacity 0.6s ease;
+  font-size: 22px;
+  line-height: 1.8;
+  z-index: 20;
+}
+
+
+.particle {
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  background: rgba(255,255,255,0.7);
+  border-radius: 50%;
+  pointer-events: none;
+  animation: floatParticle linear infinite;
+}
+
+@keyframes floatParticle {
+  0% {transform: translateY(0) translateX(0);}
+  100% {transform: translateY(-120vh) translateX(20px);}
+}
+
+
+.show { opacity: 1; }
+.hide { opacity: 0; }
+
+
+#leyenda {
+  position: fixed;
+  bottom: 15px;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  color: #fff;
+  font-weight: bold;
+  text-shadow: 0 0 8px rgba(0,0,0,0.7);
+  z-index: 30;
+  pointer-events: none;
 }
 </style>
 </head>
 <body>
 
-<!-- Pantalla inicial -->
+
+<div id="particles"></div>
+
+
 <div id="inicio">
   <h2>🎵 Toca para empezar la canción 🎵</h2>
   <button id="startBtn">Iniciar</button>
 </div>
 
-<!-- Pop-up -->
-<div class="popup" id="popup" style="display:none;">
-  <div class="popup-content">
-    <div class="letra" id="texto"></div>
-  </div>
+
+<div class="popup" id="popup">
+  <div class="letra" id="texto"></div>
 </div>
 
-<!-- Audio Beat -->
+
+<div id="leyenda">JJ</div>
+
+
 <audio id="beat">
   <source src="beat.mp3" type="audio/mpeg">
-  Tu navegador no soporta audio
 </audio>
 
 <script>
-// Frases de la canción
+
 const letra = [
-"Yo no soy celoso, ¿pero quién e'ese cabrón?",
-"Dime quién e'ese cabrón",
-"Tranquila, no soy psycho",
-"No vo'a hacer un papelón, pero",
-"Auch, mi corazón"
+  "Yo no soy celoso, ¿pero quién e'ese cabron?",
+  "Dime quién e'ese cabron",
+  "Tranquila, no soy psycho",
+  "No vo'a hacer un papelón, pero",
+  "Auch, mi corazón"
 ];
 
-// Duración de cada popup en milisegundos
-const duracion = [4000, 2500,2000,3000,1500]; // Puedes cambiar cada tiempo
+const duracion = [4000, 1500, 2000, 1700, 1500]; // segundos por popups
 
 const texto = document.getElementById("texto");
 const popup = document.getElementById("popup");
 const beat = document.getElementById("beat");
 let indice = 0;
 
-// Función para mostrar popups automáticos
-function mostrarPopup() {
-  if (indice < letra.length) {
-    texto.innerHTML = letra[indice];
-    popup.style.display = "flex";
+// Crear partículas
+const particlesContainer = document.getElementById("particles");
+for(let i=0; i<30; i++){
+  let p = document.createElement("div");
+  p.className = "particle";
+  p.style.left = Math.random()*100 + "vw";
+  p.style.top = Math.random()*100 + "vh";
+  p.style.animationDuration = 5 + Math.random()*5 + "s";
+  p.style.width = 2 + Math.random()*6 + "px";
+  p.style.height = p.style.width;
+  particlesContainer.appendChild(p);
+}
 
-    // Inicia el beat al primer popup
-    if(indice === 0){
-      beat.volume = 0.5;
-      beat.play().catch(() => console.log("Toca la pantalla para iniciar audio si Safari lo bloquea"));
+// Mostrar popup letra por letra
+function mostrarPopup() {
+  if(indice < letra.length){
+    popup.classList.add('show');
+    popup.classList.remove('hide');
+    texto.innerHTML = "";
+
+    let chars = letra[indice].split("");
+    let i = 0;
+    let interval = setInterval(() => {
+      texto.innerHTML += chars[i];
+      i++;
+      if(i >= chars.length) clearInterval(interval);
+    }, 50); // velocidad por letra
+
+
+    if(indice===0){
+      beat.volume = 0;
+      beat.play().then(()=>{
+        let vol=0;
+        let fade = setInterval(()=>{
+          vol+=0.02;
+          if(vol>=0.3){ beat.volume=0.3; clearInterval(fade); }
+          else beat.volume=vol;
+        },50);
+      }).catch(()=>console.log("Toca la pantalla para iniciar audio si Safari lo bloquea"));
     }
 
-    setTimeout(() => {
-      indice++;
-      mostrarPopup();
+    setTimeout(()=>{
+      popup.classList.remove('show');
+      popup.classList.add('hide');
+      setTimeout(()=>{
+        indice++;
+        mostrarPopup();
+      },600);
     }, duracion[indice]);
   } else {
-    popup.style.display = "none";
-    // Detiene el beat al final
-    beat.pause();
-    beat.currentTime = 0;
+    // Fin de popups
+    popup.classList.remove('show');
+    popup.classList.add('hide');
+    // Fade out del beat
+    let fade = setInterval(()=>{
+      if(beat.volume>0.02){
+        beat.volume-=0.02;
+      } else {
+        beat.pause();
+        beat.currentTime=0;
+        clearInterval(fade);
+      }
+    },50);
   }
 }
 
-// Botón de inicio para permitir audio en iPhone
-document.getElementById("startBtn").addEventListener("click", () => {
-  document.getElementById("inicio").style.display = "none"; // Oculta pantalla inicial
-  mostrarPopup(); // Inicia pop-ups y audio
+// Botón inicio
+document.getElementById("startBtn").addEventListener("click",()=>{
+  document.getElementById("inicio").style.display="none";
+  mostrarPopup();
 });
 </script>
 
 </body>
 </html>
-
-
-
