--- a/index.html
+++ b/index.html
@@ -3,49 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mi Canción Interactiva</title>
+<title>CELOSO?</title>
+
 <style>
-:root {
-  --vh: 100%;
-}
-
-html, body {
-  margin: 0;
-  padding: 0;
-  height: calc(var(--vh, 1vh) * 100);
-  width: 100%;
-  overflow: hidden;
-}
-
 body {
+  margin: 0;
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  height: 100vh;
+  overflow: hidden;
+  background: linear-gradient(270deg, #ff5f6d, #ffc371, #24c6dc, #514a9d);
+  background-size: 1000% 1000%;
+  animation: gradientBG 20s ease infinite;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(270deg, #ff5f6d, #ffc371, #24c6dc, #514a9d);
-  background-size: 800% 800%;
-  animation: gradientBG 20s ease infinite;
   color: #fff;
   position: relative;
 }
 
-/* Animación de fondo */
+
 @keyframes gradientBG {
   0% {background-position:0% 50%;}
   50% {background-position:100% 50%;}
   100% {background-position:0% 50%;}
 }
 
-/* Pantalla inicial */
-#inicio {
+/* Pantalla inicial */#inicio {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   text-align: center;
   z-index: 10;
-  height: 100%;
-  width: 100%;
 }
 
 #inicio h2 {
@@ -70,7 +59,7 @@ button:hover {
   transform: scale(1.05);
 }
 
-/* Pop-up */
+
 .popup {
   position: fixed;
   top: 50%;
@@ -91,7 +80,7 @@ button:hover {
   z-index: 20;
 }
 
-/* Partículas */
+
 .particle {
   position: absolute;
   width: 6px;
@@ -107,11 +96,11 @@ button:hover {
   100% {transform: translateY(-120vh) translateX(20px);}
 }
 
-/* Fade In/Out */
+
 .show { opacity: 1; }
 .hide { opacity: 0; }
 
-/* Leyenda abajo */
+
 #leyenda {
   position: fixed;
   bottom: 15px;
@@ -128,47 +117,39 @@ button:hover {
 </head>
 <body>
 
-<!-- Partículas -->
+
 <div id="particles"></div>
 
-<!-- Pantalla inicial -->
+
 <div id="inicio">
-  <h2>🎵 Toca para empezar la canción 🎵</h2>
+  <h2>🎵Toca para empezar la canción🎵</h2>
   <button id="startBtn">Iniciar</button>
 </div>
 
-<!-- Pop-up -->
+
 <div class="popup" id="popup">
   <div class="letra" id="texto"></div>
 </div>
 
-<!-- Leyenda fija -->
+
 <div id="leyenda">JJ</div>
 
-<!-- Audio Beat -->
+
 <audio id="beat">
   <source src="beat.mp3" type="audio/mpeg">
-  Tu navegador no soporta audio
 </audio>
 
 <script>
-// Ajuste de altura para iPhone/móviles
-function actualizarAltura() {
-  let vh = window.innerHeight * 0.01;
-  document.documentElement.style.setProperty('--vh', `${vh}px`);
-}
-window.addEventListener('resize', actualizarAltura);
-actualizarAltura();
 
-// Frases y duración
 const letra = [
-  "Yo no soy celoso, ¿pero quién e'ese ...?",
-  "Dime quién e'ese ...",
+  "Yo no soy celoso, ¿pero quién e'ese cabron?",
+  "Dime quién e'ese cabron",
   "Tranquila, no soy psycho",
   "No vo'a hacer un papelón, pero",
   "Auch, mi corazón"
 ];
-const duracion = [4000, 1500, 2000, 1700, 1500];
+
+const duracion = [4000, 1500, 2000, 1700, 1500]; // segundos por popups
 
 const texto = document.getElementById("texto");
 const popup = document.getElementById("popup");
@@ -201,7 +182,8 @@ function mostrarPopup() {
       texto.innerHTML += chars[i];
       i++;
       if(i >= chars.length) clearInterval(interval);
-    }, 50);
+    }, 50); // velocidad por letra
+
 
     if(indice===0){
       beat.volume = 0;
@@ -224,8 +206,10 @@ function mostrarPopup() {
       },600);
     }, duracion[indice]);
   } else {
+    // Fin de popups
     popup.classList.remove('show');
     popup.classList.add('hide');
+    // Fade out del beat
     let fade = setInterval(()=>{
       if(beat.volume>0.02){
         beat.volume-=0.02;
